<resources>
    <string name="app_name" translatable="false">InfReminder</string>
    <string name="create_reminder">Crear Recordatorio</string>
    <string name="create_alarm">Crear Alarma</string>
    <string name="show_reminders">Ver Recordatorios</string>
    <string name="settings">Ajustes</string>
    <string name="description_image_reminder">Imagen que caracteriza el recordatorio</string>
    <string name="tv_no_reminder">No hay ningún recordatorio creado</string>
    <string name="name">Nombre</string>
    <string name="hour">Hora</string>
    <string name="description">Descripción (opcional)</string>
    <string name="select_days">Seleccionar días</string>
    <string name="only_once">Sólo una vez</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="all_days">Todos los días</string>
    <string name="accept">Aceptar</string>
    <string name="fab_text_alarm">Añadir Alarma</string>
    <string name="fab_text_special">Añadir Especial</string>
    <string name="fab_text_reminder">Añadir Recordatorio</string>
    <string name="lista">Lista</string>
    <string name="calendario">Calendario</string>
    <string name="fecha">Fecha</string>
    <string name="cancel">Cancelar</string>
    <string name="info">Información</string>
    <string name="title_cancel">¿Está seguro de querer cancelar la operación?</string>
    <string name="alarmatorio" translatable="false">by Alarmatorio</string>

    <string name="notify_for_reminder" translatable="false">Notify for reminder</string>
    <string name="notify_for_reminder_summary" translatable="false">Notify for remind user anything</string>

    <!-- Preference Titles -->
    <string name="reminder">Recordatorio</string>
    <string name="special">Especial</string>
    <string name="alarm">Alarma</string>
    <string name="vibration">Habilitar vibración</string>
    <string name="more_info"> Más información</string>
    <string name="about_message">Esta aplicación ha sido realizada por:    Sammy Jonathan Claes   Nieves Codoñer Gil   Fernando Guillermo G Fiocca Paglia   Alejandro Iznardo Ruiz como proyecto final de Android Studio para la asignatura Desarrollo de aplicaciones para dispositivos móviles</string>
    <string name="ringtone">Seleccionar tono de alarma</string>

    <!-- Messages Preferences -->
    <string name="ringtone_description">Seleccione el tono de alarma a utilizar</string>
    <string name="vibration_description">Habilite/Deshablite la vibración de las alarmas</string>
    <string name="picker_description">Seleccione la hora en la que desea que suenen las alarmas</string>


    <!-- Sync Preferences -->

    <string name="days_error">No hay días seleccionados</string>
    <string name="alarm_created">Alarma creada</string>
    <string name="confirm_clear_reminder">¿Estás seguro de que quieres borrar este recordatorio?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="name_error">La alarma debe tener un nombre</string>
    <string name="reply_text">Responder texto</string>
    <string name="open_wiki">Abre la Wiki</string>
    <string name="reply">Responde</string>
    <string name="_30" translatable="false">30s</string>
    <string name="_15" translatable="false">15s</string>
    <string name="_60" translatable="false">60s</string>
    <string name="simple">Simple</string>
    <string name="fixed">Fijo</string>
    <string name="reply_notify">Responder</string>
    <string name="create_special">Crear Especial</string>
    <string name="special_created">Especial creado</string>
    <string name="reminder_of_day">"Recordatorios para el día:  "</string>
    <string name="no_reminder">No hay recordatorios para este día</string>
    <string name="desc_long">Descripción larga</string>
    <string name="reply_desc">Activa la opción responder a notificación</string>
    <string name="general">General</string>
    <string name="vibrate_no">Sin vibración</string>
    <string name="vibrate_short">Vibración corta</string>
    <string name="vibrate_long">Vibración larga</string>
    <string name="vibrate_special">Vibración especial</string>
    <string name="title_connection">"No hay conexión a internet</string>
    <string name="body_connection">Sin una conexión a internet activa, no se podrá seleccionar
    la opción de mensaje:</string>


</resources>