<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory android:title="@string/reminder">
        <com.example.infreminder.preference.TimePreference
            android:title="@string/reminder"
            android:summary="@string/picker_description"
            android:key="key1"
            android:icon="@drawable/ic_clock"
            android:defaultValue="90">
        </com.example.infreminder.preference.TimePreference>

        <Preference
            android:key="ringtone"
            android:title="@string/ringtone"
            android:icon="@drawable/ic_sound"
            android:summary="@string/ringtone_description" />

        <ListPreference
            android:title="@string/vibration"
            android:key="vibration"
            android:icon="@drawable/ic_vibration"
            android:entries="@array/vibration_options"
            android:entryValues="@array/vibration_options"
            android:defaultValue="@string/vibrate_no" />

    </PreferenceCategory>
</PreferenceScreen>